GpuVideoDecoder: add OnMemoryDump capability

ToT memory-infra dump shows the Textures allocated for GPU video
decoding, but it has no idea of the Renderer client on behalf of
whom the GPU-side allocation has happened, see e.g. [1].

This CL adds GpuVideoDecoder::OnMemoryDump(), with the
appropriate OwnershipEdge, so that:
- The textures from the GPU process are reported with
  |effective_size| 0 and a renderer owner, e.g. [2].
- The Renderer has a new gpu sub-category |video_decoding|
  with the textures reporting both |size| and |effective_size|,
  and to which those in the GPU process can refer to, e.g. [3].

There's a bunch of changes to GpuVideoAcceleratorFactories{Impl}
to be able to access the gpu::ContextSupport (intermediate types
are not available to media/filters); also media/filters can't
depend on ui/gl, so this CL adds a trivial trace_util.{cc,h} to
media/video, respecting the hierarchies.

[1] https://i.imgur.com/3tJThzL.png (https://imgur.com/a/7Y01lQ9)
[2] https://i.imgur.com/KqJ8jQf.jpg  (https://imgur.com/a/jrXGM49)
[3] https://i.imgur.com/f0u5xeR.png (https://imgur.com/a/zrlSVke)

Bug: 916807
Change-Id: Iffbb3cf8911ff6009a7f4989409e1bb6a95cf719
Reviewed-on: https://chromium-review.googlesource.com/c/1385546
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618662}
Former-commit-id: f02517f921654cd95652fe18a4789873d7e26e31