content/browser/media/android/browser_gpu_video_accelerator_factories.h
@@ -63,6 +63,7 @@ class BrowserGpuVideoAcceleratorFactories
   GetVideoEncodeAcceleratorSupportedProfiles() override;
   scoped_refptr<ws::ContextProviderCommandBuffer> GetMediaContextProvider()
       override;
+  gpu::ContextSupport* GetMediaContextProviderContextSupport() override;
   void SetRenderingColorSpace(const gfx::ColorSpace& color_space) override;
 
   scoped_refptr<ws::ContextProviderCommandBuffer> context_provider_;
